penambahan logo perusahaan

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="logo">
       <h1>
         <a href="index.html">
-          <img src="assets/img/logo-company.png" class="img-fluid">
+          <img src="assets/img/favicon.png" class="img-fluid">
           <span>Teco Company.</span>
         </a>
       </h1>
@@ -58,6 +58,13 @@
         <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
         <li><a class="nav-link scrollto" href="#about">Tentang Kami</a></li>
         <!-- <li><a class="nav-link scrollto" href="#gallery">Galeri</a></li> -->
+        <li class="dropdown"><a href="#"><span>Layanan</span> <i class="bi bi-chevron-down"></i></a>
+          <ul>
+            <li><a href="#">Public Transportation Guide</a></li>
+            <li><a href="#">Studying Guide</a></li>
+            <li><a href="#">Our Product</a></li>
+          </ul>
+        </li>
         <li class="dropdown"><a href="#"><span>Artikel</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
             <li><a href="#">Tujuan Dibuatnya Website</a></li>
@@ -123,20 +130,7 @@
 
           <div class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5" data-aos="fade-left">
             <h3>Apa itu Teco Company?</h3>
-            <p> Kami adalah generasi ke 3 Student company dari sman 34 jakarta, kami mengikuti program student company ini untuk meningkatkan skill entrepreneurship dan softskill untuk masa depan kami, dan sebagai company kami berfokus untuk meningkatkan kualitas hidup sehari2 masyarakat lokal dengan menggunakan produk kami yang elegan dengan menggunakan batik Indonesia.</p>
-
-            <div class="icon-box" data-aos="zoom-in" data-aos-delay="100">
-              <div class="icon"><i class="bx bx-gift"></i></div>
-              <h4 class="title"><a href="">Kewirausahaan</a></h4>
-              <p class="description">Kewirausahaan adalah tentang memulai dan mengelola bisnis untuk mencapai kesuksesan finansial dengan cara yang inovatif dan berani.</p>
-          </div>
-          
-          <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
-              <div class="icon"><i class="bx bx-gift"></i></div>
-              <h4 class="title"><a href="">Peningkatan Softskill</a></h4>
-              <p class="description">Peningkatan softskill melibatkan peningkatan kemampuan non-teknis dan atribut untuk mencapai keunggulan dalam kehidupan pribadi dan profesional.</p>
-          </div>
-          
+            <p> Kami adalah generasi ke-3 <i>Student Company</i>dari SMAN 34 Jakarta, kami mengikuti program student company ini untuk meningkatkan skill entrepreneurship dan softskill untuk masa depan kami, dan sebagai company kami berfokus untuk meningkatkan kualitas hidup sehari-hari masyarakat lokal dengan menggunakan produk kami yang elegan dengan menggunakan batik Indonesia.</p>          
           </div>
         </div>
 
@@ -197,9 +191,6 @@
       <div class="container">
 
         <div class="row content">
-          <div class="col-md-4" data-aos="fade-right">
-            <img src="assets/img/details-1.png" class="img-fluid" alt="">
-          </div>
           <div class="col-md-8 pt-4" data-aos="fade-up">
             <h3>Visi Perusahaan</h3>
             <p class="fst-italic">
@@ -528,8 +519,6 @@
           <div class="col-lg-4 col-md-6">
             <div class="footer-info">
               <h3>Teco Company.</h3>
-              <p class="pb-3"><em>Qui repudiandae et eum dolores alias sed ea. Qui suscipit veniam excepturi quod.</em></p>
-              <p>
                 Jl. Margasatwa No.1, RT.15/RW.1, Pd. Labu,<br>
                 Kec. Cilandak, Kota Jakarta Selatan, Daerah Khusus Ibukota Jakarta 12450<br><br>
                 <strong>Whatsapp:</strong>+62 821‑2305‑0002<br>
