add feature maps change font by section counter

--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
           <div class="col-xl-5 col-lg-6 video-box d-flex justify-content-center align-items-stretch" data-aos="fade-right">
           </div>
 
-          <div class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5" data-aos="fade-left">
+          <div class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5" style="line-height: 3; font-weight: bold;"data-aos="fade-left">
             <h3>Apa itu Teco Company?</h3>
-            <p> Kami adalah generasi ke-3 <i>Student Company</i>dari SMAN 34 Jakarta, kami mengikuti program student company ini untuk meningkatkan skill entrepreneurship dan softskill untuk masa depan kami, dan sebagai company kami berfokus untuk meningkatkan kualitas hidup sehari-hari masyarakat lokal dengan menggunakan produk kami yang elegan dengan menggunakan batik Indonesia.</p>          
+            <p> Kami adalah generasi ke-3 <i>Student Company</i> dari SMAN 34 Jakarta, kami mengikuti program student company ini untuk meningkatkan skill entrepreneurship dan softskill untuk masa depan kami, dan sebagai company kami berfokus untuk meningkatkan kualitas hidup sehari-hari masyarakat lokal dengan menggunakan produk kami yang elegan dengan menggunakan batik Indonesia.</p>          
           </div>
         </div>
 
@@ -478,7 +478,8 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0" data-aos="fade-left" data-aos-delay="200">
 
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.6209956211974!2d106.7948546!3d-6.313417099999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69ee162dd9e849%3A0xef20f0ce94c1efb!2sSMA%20NEGERI%2034%20Jakarta!5e0!3m2!1sid!2sid!4v1698970598417!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <!-- <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -499,7 +500,7 @@
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
+            </form> -->
 
           </div>
 
