--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           </div>
 
           <div class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5" style="line-height: 3; font-weight: bold; text-align: justify;"data-aos="fade-left">
-            <h3>Apa itu TECo Company?</h3>
+            <h3 style="text-align: left;">Apa itu TECo Company?</h3>
             <p> Kami adalah generasi ke-3 <i>Student Company</i> dari SMAN 34 Jakarta, kami mengikuti program student company ini untuk meningkatkan skill entrepreneurship dan softskill untuk masa depan kami, dan sebagai company kami berfokus untuk meningkatkan kualitas hidup sehari-hari masyarakat lokal dengan menggunakan produk kami yang elegan dengan menggunakan batik Indonesia.</p>          
           </div>
         </div>
