--- a/index.html
+++ b/index.html
@@ -157,6 +157,14 @@
         </div>
       </div>
 
+      <div class="col-lg-3 col-md-6">
+        <div class="count-box">
+          <i class="bi bi-journal-richtext"></i>
+          <span class="count-text">Trust and solidarity.</span>
+
+        </div>
+      </div>
+
       <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
         <div class="count-box">
           <i class="bi bi-journal-richtext"></i>
